--- a/清除浮动.html
+++ b/清除浮动.html
@@ -25,12 +25,17 @@
 			overflow: auto;
 			zoom: 1;
 		}*/
+		/*第三种方法*/
+		/*.d{*/
+			/*clear: both;*/
+		/*}*/
 	</style>
 </head>
 <body>
 	<div class="a clearfix">
 		<div class="b"></div>
 		<div class="c"></div>
+		<!--<div class="d"></div>-->
 	</div>
 </body>
 </html>
