--- a/事件监听.html
+++ b/事件监听.html
@@ -14,7 +14,7 @@
 <script>
   // 事件监听，第三个参数是布尔值，默认false，false是事件冒泡，true是事件捕获
   // 好像反了？
-  document.getElementById('a').addEventListener('click', function () {
+  document.getElementById('bt').addEventListener('click', function () {
       alert(1)
   }, false)
 
