--- a/定宽布局.html
+++ b/定宽布局.html
@@ -46,7 +46,8 @@
 		}*/
 
 		/*flex实现*/
-		/*body{
+		/*兼容ie10*/
+		body{
 			width: 100%;
 		}
 		.a{
@@ -56,6 +57,8 @@
 		}
 		.b{
 			flex: 0 0 50px;
+			width: 50px;
+			float: left;
 			height: 100px;
 			background-color: red;
 		}
@@ -63,7 +66,7 @@
 			flex: 1;
 			height: 100px;
 			background-color: blue;
-		}*/
+		}
 
 		/*margin加绝对定位实现*/
 		/*body{
