--- a/事件委托、冒泡.html
+++ b/事件委托、冒泡.html
@@ -20,8 +20,8 @@
 	// $('li').click(function(){
 	// 	console.log('li')
 	// })
-	
-	// 事件委托
+
+	// 事件委托 等于说只用绑定一次 用li的活绑定了太多次
 	// $('ul').click(function(e){
 	// 	console.log($(e.target).html())
 	// })
