--- a/居中布局.html
+++ b/居中布局.html
@@ -18,7 +18,7 @@
 			height: 50px;
 			background-color: blue;
 		}*/
-		
+
 		/*知道高宽的情况下使用绝对定位*/
 		/*.a{
 			position: relative;
@@ -34,7 +34,7 @@
 			height: 50px;
 			background-color: blue;
 		}*/
-		
+
 		/*不知道高宽的情况下使用绝对定位加transform*/
 		/*body{
 			width: 100%;
@@ -55,7 +55,7 @@
 			height: 50px;
 			background-color: blue;
 		}*/
-		
+
 		/*表格布局*/
 		/*.a{
 			display: table-cell;
@@ -76,5 +76,10 @@
 	<div class="a">
 		<div class="b"></div>
 	</div>
+
+<!--  浮动布局居中-->
+<!--  <div style="float: left;overflow: auto;position: relative;left: 50%">-->
+<!--    <div style="float: left;position: relative;right: 50%">12312</div>-->
+<!--  </div>-->
 </body>
 </html>
