--- a/border.html
+++ b/border.html
@@ -11,7 +11,7 @@
             <span>value1</span>
             <div class="border"></div>
         </div>
-        <div class="item">
+        <div class="item test">
             <p>item2</p>
             <span>value2</span>
             <div class="border"></div>
