--- a/addParentDom.html
+++ b/addParentDom.html
@@ -16,7 +16,7 @@
 <body>
   <div class="son">this is son</div>
   <div class="item"></div>
-  <div class="item test-git"></div>
+  <div class="item test-git-git"></div>
 </body>
 
 <script src="js/jquery.min.js"></script>
